<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@android:color/holo_green_light"
    >

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/audiowide"
            android:text="Mazatron Tutorials"
            android:textColor="@android:color/holo_red_light"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainVGrid"
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="12dp"
        >

        <!--Row 1-->
        <!--Column 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:src="@android:drawable/presence_video_busy"
                    android:layout_width="120dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_follower"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Column 2-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:src="@android:drawable/presence_video_busy"
                    android:layout_width="120dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/obstacle_avoider"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Row 2-->
        <!--Column 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@android:drawable/presence_video_busy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/wall_hugging"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Column 2-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:src="@android:drawable/presence_video_busy"
                    android:layout_width="120dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maze_solver"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Row 3-->
        <!--Column 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:src="@android:drawable/presence_video_busy"
                    android:layout_width="120dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/ir_bot"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Column 2-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:src="@android:drawable/presence_video_busy"
                    android:layout_width="120dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_bot"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>